@@ -38,6 +38,8 @@ extern	int	CONFIG_MASTER_NODEID;
 extern	int	CONFIG_NODE_NOHISTORY;
 extern  int     CONFIG_REFRESH_UNSUPPORTED;
 
+extern	int	CONFIG_NO_UNKOWN_EVENTS;
+
 typedef enum {
 	GRAPH_TYPE_NORMAL = 0,
 	GRAPH_TYPE_STACKED = 1
